[package]
name = "graphicsgeometry"
version = "0.0.0"
license = "MIT"
authors = ["Bill Liu"]
description = "lightweight geometry math for grapics"
documentation = "https://docs.rs/graphicsgeometry"
homepage = "https://github.com/exbibyte/graphicsgeometry"
keywords = ["matrix", "graphics"]
edition = "2018"

[dependencies]
num-traits = "0.2"
more-asserts = "0.2"
delegate = "0.6.1"
paste = "1.0.5"
lightmatrix = "0.4"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.0"
