[package]
name = "geom-collide"
version = "0.0.0"
license = "MIT"
authors = ["Bill Liu"]
description = "lightweight geometry math for grapics"
documentation = "https://docs.rs/geom-collide"
homepage = "https://github.com/exbibyte/collide"
keywords = ["matrix", "graphics", "geometry", "collision"]
edition = "2018"

[dependencies]
num-traits = "0.2"
more-asserts = "0.2"
delegate = "0.6.1"
paste = "1.0.5"
lightmatrix = "0.5"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.0"
